pkglibdatadir = $(pkglibdir)

pkglibdata_DATA = \
	oui4.jar\
	README.TXT

pkgliblibdatadir = $(pkglibdir)/lib

pkgliblibdata_DATA = \
	lib/jfreechart-1.0.13.jar\
	lib/jhall.jar\
	lib/swing-layout-1.0.4.jar\
	lib/AbsoluteLayout.jar\
	lib/csvutils.jar\
	lib/jcommon-1.0.16.jar

EXTRA_DIST = \
	$(pkglibdata_DATA)\
	$(pkgliblibdata_DATA)


